fix overlap bug

--- a/src/components/header/Header.module.css
+++ b/src/components/header/Header.module.css
@@ -11,6 +11,8 @@
   top: 0;
   transition: all 0.5s ease;
   background-color: var(--primary-white);
+
+  z-index: 99999;
 }
 
 .container.scrolled {
