--- a/src/components/menu/dietary/DietaryModal.module.css
+++ b/src/components/menu/dietary/DietaryModal.module.css
@@ -9,6 +9,7 @@
   justify-content: center;
   align-items: center;
   color: #393336;
+  z-index: 999998;
 }
 
 .container {
@@ -17,6 +18,7 @@
   flex-direction: column;
   padding: 1.7142857143rem;
   animation: fadeIn 0.4s ease-in-out;
+  z-index: 999999;
 }
 
 .header {
